# SDL2-Qt-GameEngine-Editor

./: CMakeLists.txt  README.md
CMakeConfig/: Config.cmake
Core/: CMakeLists.txt
Core/Private/: Engine.cpp  EngineImpl.cpp
Core/Private/ECS/: SystemManager.cpp  SystemManager.h  SystemManagerImpl.cpp  SystemManagerImpl.h  World.cpp  World.h  WorldImpl.cpp  WorldImpl.h
Core/Private/ECS/Types/: Component.h  ComponentID.h  Components.h  ComponentsList.h  TypesListOperations.h
Core/Public/Engine/Engine/: Engine.h
Core/Public/Engine/Engine/ECS/: SystemContext.h  SystemManager.h  World.h
Core/Public/Engine/Engine/ECS/Types/: Component.h  SystemBase.h  TypesList.h
Private/: Engine.cpp  EngineImpl.h  SDL2.cmake  Utils.h
Private/ECS/: SystemManager.cpp  SystemManager.h  SystemManagerImpl.cpp  SystemManagerImpl.h  World.cpp  World.h  WorldImpl.cpp
Private/ECS/Types/: Component.h  ComponentID.h  ComponentsList.h  Entity.h  TypesListOperations.h
Private/Editor/: Editor.cpp
Private/Engine/: Engine.cpp
Private/Engine/ECS/Registry/: ComponentsRegistry.h  SystemsRegistry.h
Private/Engine/ECS/Systems/: RenderSystem.cpp  RenderSystem.h  SDLEventsSystem.cpp
Private/Engine/ECS/Types/: Component.h  ComponentIdGenerator.h  Entity.h  TypesListOperations.h
Private/Types/: EngineState.h
Public/Editor/Editor/: Editor.h
Public/Engine/Engine/: Engine.h
Public/Engine/Engine/ECS/: SystemManager.h  World.h
Public/Engine/Engine/ECS/Components/: StopEngineComponent.h
Public/Engine/Engine/ECS/Systems/: SDLEventsSystem.h
Public/Engine/Engine/ECS/Types/: Component.h  ComponentId.h  ComponentIdGetter.h  Entity.h  SystemBase.h  TypesList.h
Tests/: CMakeLists.txt  temp.cpp
Tests/SystemManager/: SystemManagerTests.cpp  Systems.h
Tests/World/: Components.h  WorldTests.cpp
